# python-multiservice

./: README.md
backend/: README.md  alembic.ini  pyproject.toml
backend/migrations/: README  env.py
backend/migrations/versions/: 17357721585c_add_role_id_field_to_user.py  36d246231384_add_warehouse_fields.py  388e61c0df62_add_desc_to_product.py  5a3849708b3e_add_photo_url_field_to_user.py  61a88ebe2933_change_relations.py  6dc8d64b263d_initial_migration.py  72e567e0c17b_add_delivery_status_dict_table.py  74f73a53f439_add_review_table.py  84defb143fc6_add_username_to_user_model.py  861c8fb41e7b_change_photo_url_to_photo_base64_in_.py  a151e28e52ea_add_main_field_add_warehouse_object.py  ba87632e217a_add_category_table.py  d35fc2cb6675_change_db_schema.py  d6c048de272a_change_warehouse_fields.py  df87900a1961_change_to_full_nm_field_in_user_table.py  e24a0dd55493_delete_old_links.py
backend/src/: main.py  settings.py
backend/src/api_models/: order.py  product.py  service.py  user.py
backend/src/routers/: auth.py  product.py  profile.py
backend/src/service/: auth.py  order.py  profile.py  warehouse.py
backend/src/static/: delivery_status.py
backend/src/storage/: crud.py  engine.py  models.py
backend/src/storage/crud/: order.py  product.py
frontend/reimport-ecom/: package-lock.json  package.json
frontend/reimport-ecom/public/: robots.txt
frontend/reimport-ecom/src/: App.css  App.js  AuthPage.css  AuthPage.js  Cart.js  Product.js  (+1 more)
integrations/: README.md  docker-compose.yml
microservices/avatar_generator/: README.md  pyproject.toml  service.py
(+5 files in other folders)
