[tool.poetry]
name = "avatar-generator"
version = "1.0.0"
description = "Avatar generation service"
authors = ["akrbout <ckspoks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.2.0"
fastapi = "^0.108.0"
uvicorn = {extras = ["standart"], version = "^0.25.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
